[project]
name = "learningplansnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "networkx>=3.4.2",
    "numpy>=2.2.1",
    "pyvis>=0.3.2",
    "streamlit>=1.41.1",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "types-networkx>=3.4.2.20241227",
    "watchdog>=6.0.0",
]
